Use mongodb instead of mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=draughts-api
+spring.data.mongodb.database=draughts
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=2717
