Refactor : split gameservice in GetGamesService and CreateGameService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=draughts-api
 spring.data.mongodb.database=draughts
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=2717
+spring.data.mongodb.username=draughts_api
+spring.data.mongodb.password=K61tYsKRg9
